--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
     "@auth/mongodb-adapter": "^3.10.0",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "aos": "^2.3.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
