--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^7.0.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
