--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.3.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "swiper": "^12.0.2",
